--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.pcps.flutterdemo.demo">
    <application
-        android:label="demo"
-        android:name="${applicationName}"
+        android:label="MapsPCPS"
+        android:name="MapsPCPS"
         android:icon="@mipmap/ic_launcher">
         <activity
             android:name=".MainActivity"
@@ -27,6 +27,8 @@
         </activity>
         <!-- Don't delete the meta-data below.
              This is used by the Flutter tool to generate GeneratedPluginRegistrant.java -->
+       <meta-data android:name="com.google.android.geo.API_KEY"
+           android:value="AIzaSyC1kXO0h-rwYxulnLgQ3dFnXcZN17Qh09o"/>
         <meta-data
             android:name="flutterEmbedding"
             android:value="2" />
