--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   intl:
   connectivity_plus:
   pull_to_refresh:
+  google_maps_flutter:
+  google_maps_flutter_web:
 
 
 dev_dependencies:
@@ -69,6 +71,8 @@ flutter:
   assets:
      - asset/
      - asset/images.png
+     - asset/raw/maptheme.json
+
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
